--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,13 +57,15 @@ critical-section = "1.2.0"
 defmt = "1.0.1"
 defmt-rtt = "1.0.0"
 
-heapless = { version = "0.9.1", features = ["defmt"] }
+heapless = { version = "0.9.1", features = ["defmt", "serde"] }
 embedded-io-async = { version = "0.6.1" }
 static_cell = { version = "2.1.1", features = ["nightly"] }
 anyhow = { version = "1.0.100", default-features = false }
 bme280-rs = "0.3.0"
 embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
 aht20-async = "1.0.0"
+serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
+serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
 
 [profile.dev]
 # Rust debug is too slow.
